welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:25: error: value % is not a member of Unit
    setCouleurBrosse(T(()%w));
                         ^